# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  27 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: improved error
  handling/detection of bad pkgsplit() and catpkgsplit() calls; should close
  bug #6803.
  
  26 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: fix so that "emerge
  prune rsync" doesn't complain that you are trying to rsync and prune at the
  same time. This closes bug #6785.
  
  26 Aug 2002; Daniel Robbins <drobbins@gentoo.org> doman fixes; should work
  for pre-gzipped man-pages and man-pages with multiple "."s in their name.
  Closes bugs #6770, #6917
  
  25 Aug 2002; Martin Schlemmer <azarah@gentoo.org> emerge: fixed an
  indentation problem of the 'else:' at line 1304. 

  20 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: removed stray
  "DEBUG:" output, closing bug #6732.

*portage-2.0.29 (18 Aug 2002)

  18 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge, portage.py,
  ebuild.sh: making some effort to make output cleaner and less cluttered,
  particularly with error handling.
  
  18 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: updated so that
  "emerge --inject foo-1.0" fails instead of injecting "null/foo-1.0"; fixed
  error in help; "emerge --inject" and "emerge" with no specified files or
  package classes prints out a small warning and exits. Closes bug #6353.
  
  18 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: movefile()
  didn't like bind mounts due to a peculiar quality -- according to their
  ST_DEV stat() information, they are on the same filesystem, so rename()
  should work, but it doesn't. We now fall back to copy if rename() doesn't
  work. Closes bug #6468.
  
  18 Aug 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: made significant
  enhancements and fixes to ebuild.sh's error-handling code. Errors in
  src_unpack(), src_compile(), src_install() and others should now be correctly